[GuiFix] Fix white box showing when two scrollbars intersect

--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -3,6 +3,10 @@
 ;
 }
 
+.corner {
+    -fx-background-color: transparent;
+}
+
 .text-field {
     -fx-font-size: 12pt;
     -fx-font-family: "Segoe UI Semibold";
